--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,3 +78,14 @@ header {
 h2 {
    margin-bottom: 0.1%;
 }
+
+.indexSection{
+   background-color: #474e5d;
+   padding: 20px;
+   color: black;
+   max-width: 50%;
+   border-radius: 10px;
+   margin: 1%;
+   margin-left: 23%;
+   text-align: center;
+}
